Methods added, router added for methods closes #8
